--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -43,6 +47,7 @@ dependencies {
 
     //RxKotlin
     implementation "io.reactivex.rxjava2:rxkotlin:2.2.0"
+    implementation 'com.github.MFlisar:RxBus2:0.2'
 
     // LiveData + ViewModel
     implementation "android.arch.lifecycle:extensions:1.1.1"
@@ -57,6 +62,12 @@ dependencies {
     //Flexible Adapter
     implementation 'eu.davidea:flexible-adapter:5.1.0'
     implementation 'eu.davidea:flexible-adapter-ui:1.0.0'
+
+    //Runtime Permissions
+    implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
+
+    //Image Compression
+    implementation 'id.zelory:compressor:2.1.0'
 
     //Dagger2
     implementation 'com.google.dagger:dagger:2.16'
